Ubuntu works, still working on RedHat.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@
 .terraform.lock.hcl
 cloud/aws/terraform/control/.terraform.lock.hcl
 *.out
+cloud/aws/test-logs/plan-ubuntu.tfplan
+cloud/aws/test-logs/plan-redhat.tfplan
