--- a/cloud/aws/terraform/control/terraform.tfvars.sample
+++ b/cloud/aws/terraform/control/terraform.tfvars.sample
@@ -1,10 +1,11 @@
 region             = "us-west-2"
 availability_zones = ["us-west-2a"]
 # ami              = "ami-0bd21458ecf89f85e"  # Optional: specify existing AMI or leave empty to build automatically
+# cleanup_ami_on_destroy = false  # Set to false to keep AMI when running terraform destroy (default: true)
 key_name           = "my-dev-ec2-keypair"
 owner_name         = "alovelace"
 owner_email        = "alovelace@example.com"
-stack_name              = "mws-scale-new1main"   # (20 char max) Your initials, Stack Title, Git Branch
+stack_name              = "ll-autoscale"   # (19 char max) Your initials, Stack Title, Git Branch
 server_instance_type    = "t3a.medium" 
 server_count            = 1
 client_instance_type    = "t3a.medium"
